fix: container overflow

--- a/src/humpback/index.module.less
+++ b/src/humpback/index.module.less
@@ -1,5 +1,6 @@
 :global {
   body {
+    overflow-x: hidden;
     margin: 0;
     font-size: 14px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
